[package]
name = "gatekeeper"
version = "0.0.1"
authors = ["Konrad Gądek <kgadek@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/blancmanges/gatekeeper"
description = "Gatekeeper, a bitbucket bot."

[dependencies]
failure = "0.1.4"
itertools = "0.7.8"
lazy_static = "1.0.2"
regex = "1.0.5"
reqwest = "0.9.2"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.27"
slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3.0"
slog-bunyan = "2.1.0"
structopt = "0.2.10"
