[package]
name = "gatekeeper"
version = "0.0.1"
authors = ["Konrad Gądek <kgadek@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/blancmanges/gatekeeper"
description = "Gatekeeper, a bitbucket bot."
edition = "2018"

[dependencies]
failure = "0.1.4"
itertools = "0.8.0"
lazy_static = "1.2.0"
regex = "1.1.0"
reqwest = "0.9.5"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.38"
slog = { version = "2.4.0", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3.0"
slog-bunyan = "2.1.0"
structopt = "0.2.14"
