[package]
name = "gatekeeper"
version = "0.0.1"
authors = ["Konrad Gądek <kgadek@gmail.com>"]
license = "MPL-2.0"
repository = "https://github.com/blancmanges/gatekeeper"
description = "Gatekeeper, a stupid bitbucket bot."

[dependencies]
serde = "1.0.39"
serde_derive = "1.0.39"
serde_json = "1.0.15"
reqwest = "0.8.5"
clap = "2.31.2"
slog = { version = "2.2.3", features = ["max_level_trace", "release_max_level_trace"] }
sloggers = "0.2.6"
